# revsw-varnish

./: Dockerfile  Makefile  docker-inside-init.sh  revsw-opensource-common.mk  varnishapi.pc
debian/: changelog  control  reload-vcl  revsw-libvarnish4api-dev.install  revsw-varnish-modules.postinst  revsw-varnish4-modules.postinst  rules
debs/: .gitignore
include/: vrt.h
libvmod-chromelogger-4.0/: README.rst
libvmod-chromelogger-4.0/src/: Makefile.am  vmod_chromelogger.c  vmod_chromelogger.vcc
libvmod-querystring/: Makefile.in  config.h.in  configure  configure.ac  vmod_querystring.3
man/: varnish-cli.7
patches/: 0002-Added-vanilla-Varnish-4.0.3-sources.patch  0003-Applied-Rev-specific-patches-to-Varnish-4.0.3.patch  0004-Various-fixes-for-Vanrish-4.0.3-switch.patch  0005-Updated-autogenerated-files.patch  0006-Updated-missing.patch  0008-added-varnish4-vmod-directory.patch  0009-1.-Temporally-Added-varnishapi.pc-to-varnish4-vmods-.patch  0010-Updated-the-missed-file-in-previous-commit.patch  0011-Varnish4-VMODs-package-build-depends-on-revsw-libvar.patch  0012-Removed-unnecessary-varnishapi.pc.patch  0013-Added-vmod-timer-compilation-rule.patch  0014-Updated-the-chromelogger-vcc-fiel-to-overcome-incons.patch  0015-removed-the-unused-function-from-vcc-file-to-overcom.patch  0016-removed-the-querystring-vmod-as-it-is-not-used.patch  0017-updated-the-timer-vmod-to-work-with-varnish-4.0.2.patch  0018-Added-filter_only-function-to-the-vmod.patch  0019-added-the-missing-function-from-the-vmod.patch  0020-updated-the-function-name-in-vmod_cookie.vcc.patch  (+43 more)
(+94 files in other folders)
